public-api-prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
  namespace: bd-prd
  labels:
    app: public-api
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: public-api
  replicas: 2
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: public-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - mysql
                topologyKey: kubernetes.io/hostname
      containers:
        - name: public-api
          image: quay.io/bot_detector/public-api:81149d9
          resources:
            requests:
              cpu: 150m
              memory: 500M
          ports:
            - name: public-api-port
              containerPort: 5000
            - name: metrics
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: public-api-port
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: public-api-port
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 3
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /
              port: public-api-port
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
