public-api-prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-svc
  namespace: bd-prd
  labels:
    app: public-api
spec:
  selector:
    app: public-api
  ports:
    - name: public-api-port
      port: 5000
      protocol: TCP
      targetPort: public-api-port
    - name: metrics
      port: 8000
      protocol: TCP
      targetPort: metrics
