public-api-prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pub-api-ingress
  namespace: bd-prd
  labels:
    app: public-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1M
    nginx.ingress.kubernetes.io/global-rate-limit: '100'
    nginx.ingress.kubernetes.io/global-rate-limit-window: 1m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api-v2.prd.osrsbotdetector.com # this is mainly for the purposes such that the /docs are available
      secretName: public-api-tls
  rules:
    - host: api-v2.prd.osrsbotdetector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-api-svc
                port:
                  name: public-api-port
